src/test/deca/context/invalid/classes/duplicate_class_name_custom.deca
// Description :
// test de déclaration de deux classes avec le même nom
//
// Resultats :
//    Erreur contextuelle
//    Ligne 11 : Classe A déjà déclarée

class A {
}

class A { // doit échouer
}